/*
 * Copyright Â© 2021-2022 Durudex

 * This file is part of Durudex: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.

 * Durudex is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU Affero General Public License for more details.

 * You should have received a copy of the GNU Affero General Public License
 * along with Durudex. If not, see <https://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package durudex;

option go_package = "github.com/durudex/durudex-gateway/internal/delivery/grpc/pb;pb";

service AuthService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  rpc SignIn(SignInRequest) returns (SignInResponse);
  rpc SignOut(SignOutRequest) returns (SignOutResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
}

message SignUpRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message SignUpResponse {
  bytes id = 1;
}

message SignInRequest {
  string username = 1;
  string password = 2;
  string ip = 3;
}

message SignInResponse {
  string access = 1;
  string refresh = 2;
}

message SignOutRequest {
  string refresh_token = 1;
  string ip = 2;
}

message SignOutResponse {}

message RefreshTokenRequest {
  string refresh_token = 1;
  string ip = 2;
}

message RefreshTokenResponse {
  string access = 1;
}
